fix: transactions spacing & nav

--- a/app/Calendar.css
+++ b/app/Calendar.css
@@ -113,6 +113,7 @@
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
   background-color: #e6e6e6;
+  border-radius: 100%;
 }
 
 .react-calendar__tile--now {
